--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-number-format": "^5.4.4",
     "zod": "^4.0.17"
   },
   "devDependencies": {
